PYIC-5759: update IdentityClaim to use Name and NamePart classes from vocab